syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "barber/barbershop_services.proto";

option go_package = "barbershop/src/pb/barber";


message CreateBarberShopServiceRequest{
    string id = 1;
    int32 barbershop_category_id = 2;
    string barber_shop_id = 3;
    int32 gender_id = 4;
    string name = 5;
    int32 timer = 6;
    float price = 7;
    optional string description = 8;
    optional string image_url = 9;   
}

message CreateBarberShopServiceResponse{
    BarberShopServices barber_shop_service = 1;
}