syntax = "proto3";

package pb;

import "barber/barbershop_services.proto";

option go_package = "barbershop/src/pb/barber";


message GetBarberShopServicesRequest{
    string id = 1;
}

message GetBarberShopServicesResponse {
    BarberShopServices barbershop_services = 1;
}